Nondeliverable/Training/7thWeek/3-ANTLRTutorial/Chapter4/4.1/LibExpr.g4
grammar LibExpr;
import CommonLexerRules;

prog    :   stat+;

stat    :   expr NEWLINE
        |   ID '=' expr NEWLINE
        |   NEWLINE
        ;

expr    :   expr ('*'|'/') expr
        |   expr ('+'|'-') expr
        |   INT
        |   ID
        |   '(' expr ')'
        ;
